--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,3 +19,9 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# include scrollback history
+set-option -g history-limit 3000
+
+# Start numbering at 1
+set -g base-index 1
+
