enable panes selection and resize with mouse

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,11 @@ bind -n M-Down select-pane -D
 # include scrollback history
 set-option -g history-limit 3000
 
-# Start numbering at 1
+# start numbering at 1
 set -g base-index 1
 
+# enable mouse
+set -g mode-mouse off		# don't select with mouse
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
