--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,9 @@
 # link: http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 
+# setup TMUX version for further if-shell checks
+run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
+run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
+
 # remap prefix from C-b to `
 unbind C-b
 set -g prefix `
@@ -26,11 +30,12 @@ set-option -g history-limit 3000
 set -g base-index 1
 
 # enable mouse
-set -g mode-mouse off		# don't select with mouse
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+if-shell 'test $TMUX_VERSION_MAJOR -eq 1' 'set -g mode-mouse off'
+if-shell 'test $TMUX_VERSION_MAJOR -eq 1' 'set -g mouse-resize-pane on'
+if-shell 'test $TMUX_VERSION_MAJOR -eq 1' 'set -g mouse-select-pane on'
+if-shell 'test $TMUX_VERSION_MAJOR -eq 1' 'set -g mouse-select-window on'
 
+if-shell 'test $TMUX_VERSION_MAJOR -eq 2' 'set -g mouse on'
 
 ######################
 ### DESIGN CHANGES ###
@@ -42,7 +47,8 @@ set -g pane-active-border-fg brightred
 
 ## Status bar design
 # status line
-set -g status-utf8 on
+if-shell 'test $TMUX_VERSION_MAJOR -eq 1' 'set -g status-utf8 on'
+
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour12
@@ -122,3 +128,4 @@ setw -g window-status-bell-bg colour1
 set -g message-attr bold
 set -g message-fg colour232
 set -g message-bg colour166
+
