* move tmux autorun script to separate shell (to be able to use it in .zshrc) * rename git shortcuts in bash to match zsh ones * use VI copy/paste shortcuts in tmux selection screen

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,10 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
 # include scrollback history
 set-option -g history-limit 3000
 
