--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,19 +6,22 @@
 #   set-window-option   -> setw          "set -w"
 #   list-sessions       -> ls
 
-# config reload
-bind r source-file ~/.config/tmux/tmux.conf
+# add more accessible prefix 'Ctrl+Q' but keep the old one as fallback
+set -g prefix C-b
+bind C-b send-prefix
 
-# remap prefix from C-b to `
-unbind C-b
-set -g prefix C-q
-bind C-q send-prefix
+set -g prefix2 C-q
+bind C-q send-prefix -2
 
 # split panes using | and -
 bind | split-window -h
+bind "\\" split-window -h   # don't need to press `Shift`
 bind - split-window -v
 # unbind '"'
 # unbind %
+
+# config reload
+bind r source-file ~/.config/tmux/tmux.conf
 
 # start numbering from 1
 set -g base-index 1
