`tmux`: enable `truecolor` for NVIM

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -40,6 +40,11 @@ bind -T copy-mode-vi 'y' send-keys -X copy-selection
 # enable mouse control
 set -g mouse on
 
+# NVIM advices:
+set -g focus-events on
+# enable truecolor feature (required by NVIM's `vim.opt.termguicolors` option)
+set -as terminal-features ',*:RGB'
+
 # TBD: don't rename windows automatically
 set-option -g allow-rename off
 
