add 'R' shortcut for window title renaming
* add notes on useful shortcuts

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,6 +6,22 @@
 #   set-window-option   -> setw          "set -w"
 #   list-sessions       -> ls
 
+# useful shortcuts:
+#   C-q                 - prefix (default: 'C-b')
+#   r                   - reload tmux config
+# windows:
+#   c                   - create window
+#   n                   - switch to next window
+#   R                   - rename window title (default: ',')
+# panes:
+#   C-o                 - switch panes
+#   -                   - split horizontally (default: '"')
+#   \ or |              - split vertically (default: '%')
+# window content and history
+#   [                   - enter meta mode (Shift-A will exit this mode)
+#   v                   - start selection
+#   y                   - copy selected
+
 # add more accessible prefix 'Ctrl+Q' but keep the old one as fallback
 set -g prefix C-b
 bind C-b send-prefix
@@ -17,8 +33,6 @@ bind C-q send-prefix -2
 bind | split-window -h
 bind "\\" split-window -h   # don't need to press `Shift`
 bind - split-window -v
-# unbind '"'
-# unbind %
 
 # config reload
 bind r source-file ~/.config/tmux/tmux.conf
@@ -45,8 +59,9 @@ set -g focus-events on
 # enable truecolor feature (required by NVIM's `vim.opt.termguicolors` option)
 set -as terminal-features ',*:RGB'
 
-# TBD: don't rename windows automatically
-set-option -g allow-rename off
+# don't rename windows automatically (use "C-b ," or "C-q R" to rename window title)
+set -g allow-rename off
+bind R command-prompt -I "#W" "rename-window '%%'"
 
 # include scrollback history
 set -g history-limit 3000
